bk_ida/gccida/c2/verify_flow_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2150:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
last_insn = ( rtx)last_insn[1]; 
                  ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2177:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
last_insn = ( rtx)last_insn[1]; 
                  ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2248:53: error: too many arguments provided to function-like macro invocation
fatal_insn( "wrong insn in the fallthru edge", end, "cfgrtl.c", 1717, "verify_flow_info"); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2248:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "wrong insn in the fallthru edge", end, "cfgrtl.c", 1717, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2311:20: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct edge_def *')
v3[v30->index + 2] -= j; 
~~~~~~~~~~~~~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2379:66: error: too many arguments provided to function-like macro invocation
fatal_insn( "flow control insn inside a basic block", ( rtx)v31, "cfgrtl.c", 1829, "verify_flow_info"); 
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2379:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "flow control insn inside a basic block", ( rtx)v31, "cfgrtl.c", 1829, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2397:13: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'edge' (aka 'struct edge_def *'))
v3[v43 + 2] -= m; 
~~~~~~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2438:48: error: too many arguments provided to function-like macro invocation
fatal_insn( "insn outside basic block", insns, "cfgrtl.c", 1887, "verify_flow_info"); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2438:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "insn outside basic block", insns, "cfgrtl.c", 1887, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2456:54: error: too many arguments provided to function-like macro invocation
fatal_insn( "return not followed by barrier", insns, "cfgrtl.c", 1895, "verify_flow_info"); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/cfgrtl.c:2456:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "return not followed by barrier", insns, "cfgrtl.c", 1895, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/verify_flow_info/src/obj/cfgrtl.o] Error 1
